2005-09-14  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (GETTEXT): properly define in clisp.h on woe32

2005-09-14  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/bdb.c (BDB:DB-VERSION): fixed a GC-safety bug

2005-09-14  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/sql.lisp (*sql-login*, *sql-password*):
	new variables
	(sql-connect): default login and password to them instead of a literal

2005-09-13  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/sql.lisp (*sql-log*): init to NIL to avoid
	saving a closed terminal stream into the image
	(with-sql-connection): accept :LOG and bind *sql-log*
	* modules/postgresql/postgresql.lisp ("SQL"): make DEFVAR exporting
	Reported by Richard Ray <rray@mstc.state.ms.us>
	* modules/postgresql/sql.lisp: moved tests into ...
	* modules/postgresql/test.tst: new file

2005-09-13  "Dr. Werner Fink"  <werner@suse.de>

	* modules/clx/new-clx/demos/sokoban.lisp (find-outers):
	call DISPLAY-FORCE-OUTPUT
	* modules/clx/new-clx/clx.f (PUT-IMAGE): do not call XSync()
	(x_open_display): install error handlers here before
	XOpenDisplay() to catch errors there too
	(OPEN-DISPLAY): do not install error handlers

2005-09-12  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/test.tst: SHOW the results for FILE-OWNER
	physical-memory: guard against broken unixes, like FreeBSD 4.10-BETA
	stat-vfs: FreeBSD lacks this too

2005-09-12  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (%DISPLAY-XID): wrap XAllocID in X_CALL
	(image_put_and_destroy): wrapper for XPutImage & XDestroyImage
	(handle_image_z, PUT-IMAGE): use it
	(foreign_slot): wrapper for SLOT-VALUE & check_fpointer
	(get_ptr_object_and_display, get_font_info_and_display)
	(DISCARD-FONT-INFO): use it
	(create_image): wrapper for XCreateImage
	(handle_image_z, PUT-IMAGE): use it

2005-09-12  Sam Steingold  <sds@gnu.org>

	* genclisph.d (export_def): added
	(emit_define1): removed
	* lispbibl.d: use export_def() instead of emit_define() and